# ColorFitter

./: .gitignore  Makefile  README.md  dataHandler.cc  dataHandler.h  fit2latex.py  graphics.cc  graphics.h  ifit.cc  ifit.h  load.C  load.cc  main.cc  main.h  model.cc  model.h
.github/workflows/: ccpp.yml
FitOutput/: IfitSummary3.xlsx
ROOT/: hermesData.txt  makeFigure.C  testFitBL30_plot_mr_0_3.txt  testFitBL40_plot_pt_0_0.txt  testFitBLE30_plot_pt_0_2.txt  testFitBLE40_plot_mr_0_2.txt  testFitBL_plot_pt_0_1.txt  testFitBL_plot_pt_0_2.txt
analysis-HERMES/: README.md
analysis-HERMES/FitOutput/: IfitSummary3.csv  IfitSummary3.xlsx  testFitBL.csv  (+5 more)
estimations/: ExtrapolationTable_v2.xlsx  PlotEstimations.C  plot.C
hermes-data/: PlotMultiplicity.C
include/: MultiGaus.h  configuration.h  dataFormat.h  dataHandler.h  graphics.h  ifit.h  main.h  model.h
jaxodraw/: diagram.eps  diagram.key  diagram.xml
python/: AtlasStyle.py  FigureSet1_figure_Chi2.py  FigureSet1_figure_Parameters_dz.py  FigureSet1_figure_Parameters_lp.py  FigureSet1_figure_Parameters_qhat.py  FigureSet1_figure_Parameters_sigma.py  FigureSet2Lp.py  FigureSet2_figure_Chi2Summary.py  FigureSet2_figure_Parameters_deltaZ3P.py  FigureSet2q0.py  FigureSet3_figure_Computed_Qhat.py  FigureSet3_figure_Computed_QhatQuark.py  FigureSet3_figure_Parameters_deltaZ3PWEIGTED.py  FigureSet3_figure_Parameters_deltaZ3PWEIGTED_23.py  Figure_TestLund.py  demoPlotsFull.py  fig01_hermes_data.py  fig04a_parameters_qhat.py  fig04b_parameters_lp.py  fig04c_parameters_sigma.py  fig04d_parameters_dz.py  fig05_chi2.py  fig06_qhat_full.py  figure_Calculated_Qhat.py  figure_Calculated_Qhat_quark.py  figure_Chi2.py  figure_Chi2Summary.py  figure_Computed_Qhat.py  figure_Parameters_deltaZ3P.py  figure_Parameters_dz.py  figure_Parameters_lp.py  figure_Parameters_lp2P.py  figure_Parameters_qhat.py  figure_Parameters_qhat2P.py  figure_Parameters_sigma.py  interpolate.py  interpolate2.py  interpolate_A.py  makeFigure.py
source/: MultiGaus.cc  configuration.cc  dataHandler.cc  graphics.cc  ifit.cc  main.cc  model.cc
test-jlab/: ConvertInputData.C  InputData-JLab.root
test_kaons/: multiplicities.C
utils/: AverageDensityCalc.C  LundFitting.C  PlotCorrelationParameters.C  PlotCrossSection.C  PlotDemoModel.py  PlotDemoModelExtended.py  PlotDemoModelSigma.py  PlotEloss.C  PlotLP.C  PlotLPEloss.C  PlotQhat.C  PlotQhatNew.C  PlotQhatPerA.C  PlotQhatPerA_conflict-20191108-142947.C  PlotShift.C  figure_model_results.py  figure_model_results_BLEy.py  figure_model_results_combined.py  makeFigure.C  makeFigure2.C  makePlots.C  monitoring.C  multiplicities.C  plot_all_params.py  plot_cross_section.py  plot_energy_loss.py  plot_energy_loss_per_A13.py  plot_kperp.py  plot_production_length_fits.py  plot_production_length_fits_and_qhat.py  plot_qhat.py  readTestFit.C  set_figure_size.py  setupInputData.C  testPlot.C  toy.C  toy_uncertainties_analysis.C
utils/pythia/esteban/LHAPDF-6.0.5/examples/: Makefile  Makefile.am  Makefile.in  testpdf.cc  testpdfset.cc
utils/pythia/esteban/LHAPDF-6.0.5/include/LHAPDF/: AlphaS.h  BicubicInterpolator.h  BilinearInterpolator.h  Config.h  ErrExtrapolator.h  Exceptions.h  Extrapolator.h  Factories.h  GridPDF.h  Info.h  Interpolator.h  KnotArray.h  LHAGlue.h  LHAPDF.h  LogBicubicInterpolator.h  LogBilinearInterpolator.h  Makefile  Makefile.am  Makefile.in  NearestPointExtrapolator.h  PDF.h  PDFIndex.h  PDFInfo.h  PDFSet.h  Paths.h  Utils.h  Version.h  Version.h.in
utils/pythia/esteban/LHAPDF-6.0.5/src/: AlphaS.cc  AlphaS_Analytic.cc  AlphaS_Ipol.cc  AlphaS_ODE.cc  BicubicInterpolator.cc  BilinearInterpolator.cc  ErrExtrapolator.cc  Factories.cc  GridPDF.cc  Info.cc  Interpolator.cc  LHAGlue.cc  LogBicubicInterpolator.cc  LogBilinearInterpolator.cc  Makefile  Makefile.am  Makefile.in  NearestPointExtrapolator.cc  PDF.cc  PDFInfo.cc  Paths.cc
utils/pythia/esteban/LHAPDF-6.0.5/src/.deps/: AlphaS.Plo  AlphaS_Analytic.Plo  AlphaS_Ipol.Plo  AlphaS_ODE.Plo  BicubicInterpolator.Plo  BilinearInterpolator.Plo  ErrExtrapolator.Plo  Factories.Plo  GridPDF.Plo  Interpolator.Plo  LogBicubicInterpolator.Plo  LogBilinearInterpolator.Plo  NearestPointExtrapolator.Plo  PDF.Plo  PDFInfo.Plo  libLHAPDFGlue_la-LHAGlue.Plo  libLHAPDFInfo_la-Info.Plo  libLHAPDFPaths_la-Paths.Plo
utils/pythia/esteban/LHAPDF-6.0.5/src/yamlcpp/: Makefile  Makefile.am  Makefile.in
utils/pythia/esteban/LHAPDF-6.0.5/src/yamlcpp/yaml-cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
utils/pythia/esteban/LHAPDF-6.0.5/src/yamlcpp/yaml-cpp/src/contrib/: graphbuilder.cpp  graphbuilderadapter.cpp  graphbuilderadapter.h
utils/pythia/esteban/LHAPDF-6.0.5/src/yamlcpp/yaml-cpp/util/: CTestTestfile.cmake  Makefile  api.cpp  cmake_install.cmake  parse  parse.cpp
utils/pythia/esteban/LHAPDF-6.0.5/tests/: Makefile  Makefile.am  Makefile.in  testalphas.cc  testgrid.cc  testinfo.cc  testnsetperf.cc  testpaths.cc  testsetperf.cc
utils/pythia/esteban/LHAPDF-6.0.5/wrappers/python/: Makefile  Makefile.am  Makefile.in  clhapdf.pxd  lhapdf.cpp  lhapdf.pyx  setup.py  setup.py.in
(+143 files in other folders)
