pkginclude_HEADERS = \
  LHAPDF.h \
  Version.h \
  Info.h \
  Config.h \
  PDFSet.h \
  PDFInfo.h \
  Utils.h \
  Paths.h \
  Exceptions.h \
  Factories.h \
  PDFIndex.h \
  PDF.h \
  GridPDF.h \
  KnotArray.h \
  Interpolator.h \
  Extrapolator.h \
  BilinearInterpolator.h \
  BicubicInterpolator.h \
  LogBilinearInterpolator.h \
  LogBicubicInterpolator.h \
  ErrExtrapolator.h \
  NearestPointExtrapolator.h \
  AlphaS.h

if ENABLE_LHAGLUE
  pkginclude_HEADERS += LHAGlue.h
endif
